web/frontend/src/style.css
@import "tailwindcss";

@theme {
  --font-sans: "Roboto", sans-serif;
  --color-background: #0d0d12;
  --color-surface: #303030;
  --color-muted: #7e7d7d;
  --color-overlay: rgba(25, 25, 25, 0.8);
  --color-border: #303030;
  --color-track: #3bda28;
  --color-artist: #58e1bd;
  --color-album: #bad747;
  --color-label: #ca53fa;

  @keyframes sweep {
    0% {
      background-position: -200% center;
    }
    100% {
      background-position: 200% center;
    }
  }
  --animate-sweep: sweep 8s linear infinite;
}

.no-scrollbar {
  scrollbar-width: none;
}
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

#root {
  --color-background: #0d0d12;
}

html,
body {
  width: 100%;
  height: 100%;
  font-size: 16px;
  color-scheme: dark;
  /* prevent rubber-banding and history navigation */
  overscroll-behavior: none;
  /* ensure the map fills the screen without scrolling the body */
  overflow: hidden;
  touch-action: none;
}

